--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 OPENAI_API_KEY=your_openai_api_key_here
-TINYBIRD_TOKEN=your_tinybird_token_here
-TINYBIRD_HOST=https://api.tinybird.co
+CLICKHOUSE_KEY_ID=your_clickhouse_key_id_here
+CLICKHOUSE_KEY_SECRET=your_clickhouse_key_secret_here
+CLICKHOUSE_URL=https://queries.clickhouse.cloud/service/<your-service-id>/run
