--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,38 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-openai==1.12.0
-lark==1.1.9
-python-dotenv==1.0.0
-httpx==0.26.0
-pytest==8.0.0
-pytest-asyncio==0.23.4
-pandas==2.2.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+certifi==2026.1.4
+click==8.3.1
+distro==1.9.0
+fastapi==0.129.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+idna==3.11
+iniconfig==2.3.0
+jiter==0.13.0
+lark==1.3.1
+numpy==2.4.2
+openai==2.21.0
+packaging==26.0
+pandas==3.0.0
+pluggy==1.6.0
+pydantic==2.12.5
+pydantic_core==2.41.5
+Pygments==2.19.2
+pytest==9.0.2
+pytest-asyncio==1.3.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+PyYAML==6.0.3
+six==1.17.0
+sniffio==1.3.1
+starlette==0.52.1
+tqdm==4.67.3
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+uvicorn==0.40.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==16.0
